--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -1,10 +1,3 @@
-name: Playwright Tests (Java)
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -19,6 +12,10 @@ jobs:
           distribution: temurin
           java-version: 17
 
+      - name: Install system dependencies for Playwright
+        run: |
+          sudo npx playwright install-deps
+
       - name: Cache Maven packages
         uses: actions/cache@v4
         with:
@@ -27,8 +24,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Install dependencies
+      - name: Install Maven dependencies
         run: mvn install -DskipTests
 
       - name: Run Playwright tests
         run: mvn test
+
+
+      
